@@ -1,5 +1,8 @@
 * What is new in gsl-1.2:
 
+** Fixed bug in gsl_interp_cspline_periodic which caused a
+discontinuity in the derivative near the boundary.
+
 ** A new random number generator gsl_rng_taus2 has been added to
 correct flaws in the seeding procedure of gsl_rng_taus, as described
 in an erratum to the original paper of P. L'Ecuyer.
